[package]
name = "rppico_skeleton"
version = "0.1.1"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7" }
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12"
embedded-graphics = "0.7.1"
alloc-cortex-m = "0.4"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
panic-halt = "0.2.0"
arrayvec = { version = "0.7.1", default-features = false }
rp-pico = "0.5"
nb = "1.0.0"
log = "0.4.17"
ringbuffer = "0.9.0"

[[bin]]
name = "rppico_skeleton"
path = "src/main.rs"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = false
lto = 'fat'

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 3
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 3
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
